[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Sloop <66267333+spallis93@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
tabulate = "^0.9.0"
pandas = "^1.5.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
